# trading-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: memory-bank.mdc  ui-ux-design-best-practices.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
tests/: test_data_sources.py  test_indicators.py
trading_bot/: config.py
trading_bot/analysis/indicators/: __init__.py  base.py  bollinger.py  ema.py  macd.py  obv.py  rsi.py  sma.py
trading_bot/cache/: redis_client.py
trading_bot/data_processing/: market_preprocessor.py  news_preprocessor.py
trading_bot/data_sources/crypto/: ccxt_connector.py
trading_bot/data_sources/news/: newsapi_client.py  rss_collector.py  scraper.py
trading_bot/data_sources/stocks/: alpaca_connector.py  ibkr_connector.py  yfinance_connector.py
trading_bot/db/: pg_client.py
trading_bot/db/migrations/: 001_create_market_data.sql
